--- a/privacy/index.html
+++ b/privacy/index.html
@@ -46,14 +46,14 @@
 <body>
     <header class="header">
       <a href="/">
-        <img class="logo" alt="Omnifood logo" src="/img/omnifood-logo.png" />
+        <img class="logo" alt="Omnifood logo" src="/img/budgetpal_logo2.png" />
       </a>
 
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="/privacy">Privacy</a></li>
           <li><a class="main-nav-link" href="/terms">Terms</a></li>
-          <li><a class="main-nav-link nav-cta" href="/">Try for free</a></li>
+          <li><a class="main-nav-link nav-cta" href="/">Try now</a></li>
         </ul>
       </nav>
 
