--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs."
+      content="BudgetPal is a desktop application that will simplify your monthly budget tracking and categorization."
     />
 
     <!-- Always include this line of code!!! -->
@@ -41,10 +41,11 @@
 
     <title>BudgetPal</title>
   </head>
+  
   <body>
     <header class="header">
       <a href="/">
-        <img class="logo" alt="Omnifood logo" src="img/budgetpal_logo2.png" />
+        <img class="logo" alt="BudgetPal logo" src="img/budgetpal_logo2.png" />
       </a>
 
       <nav class="main-nav">
@@ -89,7 +90,7 @@
               <img
                 src="img/icon_512x512.png"
                 class="hero-img"
-                alt="Woman enjoying food, meals in storage container, and food bowls on a table"
+                alt="App logo"
               />
             </picture>
           </div>
@@ -192,16 +193,6 @@
                     <img src="img/logo-etsy.png" alt="Etsy" class="social-icon" />
                 </a>
             </li>
-            <!-- <li>
-              <a class="footer-link" href="#"
-                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
-              ></a>
-            </li>
-            <li>
-              <a class="footer-link" href="#"
-                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
-              ></a>
-            </li> -->
           </ul>
         </div>
 
@@ -220,35 +211,6 @@
             </p>
           </address>
         </div>
-
-        <!-- <nav class="nav-col">
-          <p class="footer-heading">Account</p>
-          <ul class="footer-nav">
-            <li><a class="footer-link" href="#">Create account</a></li>
-            <li><a class="footer-link" href="#">Sign in</a></li>
-            <li><a class="footer-link" href="#">iOS app</a></li>
-            <li><a class="footer-link" href="#">Android app</a></li>
-          </ul>
-        </nav>
-
-        <nav class="nav-col">
-          <p class="footer-heading">Company</p>
-          <ul class="footer-nav">
-            <li><a class="footer-link" href="#">About Omnifood</a></li>
-            <li><a class="footer-link" href="#">For Business</a></li>
-            <li><a class="footer-link" href="#">Cooking partners</a></li>
-            <li><a class="footer-link" href="#">Careers</a></li>
-          </ul>
-        </nav>
-
-        <nav class="nav-col">
-          <p class="footer-heading">Resources</p>
-          <ul class="footer-nav">
-            <li><a class="footer-link" href="#">Recipe directory </a></li>
-            <li><a class="footer-link" href="#">Help center</a></li>
-            <li><a class="footer-link" href="#">Privacy & terms</a></li>
-          </ul>
-        </nav> -->
       </div>
     </footer>
   </body>
