--- a/privacy/index.html
+++ b/privacy/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="Omnifood is an AI-powered food subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs."
+      content="BudgetPal is a desktop application that will simplify your monthly budget tracking and categorization."
     />
 
     <!-- Always include this line of code!!! -->
@@ -46,7 +46,7 @@
 <body>
     <header class="header">
       <a href="/">
-        <img class="logo" alt="Omnifood logo" src="/img/budgetpal_logo2.png" />
+        <img class="logo" alt="BudgetPal logo" src="/img/budgetpal_logo2.png" />
       </a>
 
       <nav class="main-nav">
