Bug fixes for hamburger

--- a/index.html
+++ b/index.html
@@ -194,6 +194,10 @@
                 </a>
             </li>
           </ul>
+          <p class="copyright">
+              Copyright &copy; <span class="year">2023</span> by BudgetPal.
+              All rights reserved.
+          </p>
         </div>
 
         <div class="address-col">
