--- a/privacy/index.html
+++ b/privacy/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" href="img/bplogo3.png" />
-    <link rel="apple-touch-icon" href="img/bplogo3.png" />
+    <link rel="apple-touch-icon" href="img/icon_256x256.png" />
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
