--- a/terms/index.html
+++ b/terms/index.html
@@ -12,9 +12,9 @@
     <!-- Always include this line of code!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="img/bplogo3.png" />
-    <link rel="apple-touch-icon" href="img/icon_256x256.png" />
-    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="icon" href="/img/bplogo3.png" />
+    <link rel="apple-touch-icon" href="/img/icon_256x256.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
@@ -38,7 +38,7 @@
       defer
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
-    <script defer src="js/script.js"></script>
+    <script defer src="/js/script.js"></script>
 
     <title>BudgetPal - Terms of Service</title>
 </head>
