--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       defer
       src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
     ></script>
-    <script defer src="js/script.js"></script>
+    <script defer src="/js/copyright.js"></script>
+    <script defer src="/js/script.js"></script>
 
     <title>BudgetPal</title>
   </head>
